fixed alignment and color of navbar

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -14,5 +14,5 @@ $clr-neutral-900: #06111f;
 
 //TEAL COLORS
 $dark-teal: #477981;
-$bright-teal: #58b0b9;
-$light-teal: #7ec8ce;
+$bright-teal: #28b2bb;
+$light-teal: #00eaff;
