--- a/src/sass/layouts/_navbar.scss
+++ b/src/sass/layouts/_navbar.scss
@@ -7,10 +7,12 @@
   display: inline-block;
   width: 100vw;
   height: 10vh;
+  background-color: transparent;
 }
 nav li {
   list-style: none;
-  color: $clr-neutral-900;
+  color: $clr-neutral-100;
+  padding: 20px;
 }
 
 nav li:hover {
@@ -21,19 +23,21 @@ nav li:hover {
 #logo-wrapper {
   .logo img {
     margin: 10px;
-    width: 120px;
-    height: 30px;
+    width: 145px;
+    height: 40px;
   }
 }
 
 .search-bar {
-  border: 1px solid grey;
-  border-radius: 3px;
+  border: none;
+  border-radius: 50px;
   height: 25px;
   width: 40vw;
-  outline: 0;
   background-color: #f5f5f5;
+  font-size: 12px;
+  padding: 10px;
 }
 .search-icon {
   padding-left: 15px;
+  color: $clr-neutral-100;
 }
